Add CheapSet, reduce select bloat, make blank options restore correctly (bug 166168), r=rjesup@wgate.com, sr=jst@netscape.com